prevent preload img jumping 3

--- a/boutique/static/boutique/css/custom.scss
+++ b/boutique/static/boutique/css/custom.scss
@@ -9,7 +9,7 @@
   color: rgb(36, 36, 36);
 
   h1.h1-title-text {
-    font-size: 24px !important;
+    font-size: 22px !important;
     text-align: center !important;
     color: rgb(74, 74, 74) !important;
   }
